# fetch-web-novel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  fetch_web_novel.py  main.py  pyproject.toml
src/fetch-web-novel/: main.py
