[tool.poetry]
name = "fetch-web-novel"
version = "0.3.0"
description = "CLI tool to retrieve the contents of a specified novel from a novel posting site"
authors = ["Hibiki(4513ECHO) <mail@4513echo.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/4513ECHO/fetch-web-novel"
packages = [
  { include = "src" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Environment :: Console",
    "Topic :: Terminals",
    "Typing :: Typed"
]

[tool.poetry.scripts]
fwn = "src.fetch_web_novel.main:main"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
toml = "^0.10.2"
aiofiles = "^0.7.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
isort = "^5.10.0"
black = "^22.6.0"
mypy = "^0.971"
flake8 = "^5.0.0"
flake8-pyproject = "^1.1.0"
types-aiofiles = "^0.8.9"
types-toml = "^0.10.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
py_version = 39
profile = "black"

[tool.mypy]
python_version = "3.9"
show_error_codes = true
pretty = true
strict = true

[tool.flake8]
indent-size = 4
max-line-length = 120
